fixed table layout issues with responsiveness

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -15,7 +15,7 @@
 
 .prindextable{
 	margin: 0 auto;
-	width: 75%;
+	width: 100%;
 }
 
 .prindextable tr, th{
@@ -24,7 +24,6 @@
 }
 
 .prindextable td{
-	width: 100%;
 	padding-left: 15px;
 	padding-right: 15px;
 }
